Removed unnecessary React hook imports. CSS changes to fix scroll-bar shift.

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -4,7 +4,6 @@
 }
 
 .main {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
