--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,8 @@
 
 html,
 body {
+  margin-right: calc( -1 * (100vw - 100%));
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
